duicontrolpanel (0.14.3~unreleased) unstable; urgency=low

  * Added performance measuring build option.

 -- Viktor Nagy <viktor.nagy@blumsoft.eu>  Mon, 10 Oct 2011 09:56:25 +0200

duicontrolpanel (0.14.2.2) unstable; urgency=low

  * Fixes: NB#283817 - [TASK] support for adding combobox-plugin into a
    settings category page

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 28 Sep 2011 11:38:54 +0200

duicontrolpanel (0.14.1) unstable; urgency=low

  [ Viktor Nagy ]
  * Fixes: NB#266453 - [Performance] Response time open settings
    application is above target

 -- Robert Manner <robert.manner@blumsoft.eu>  Mon, 26 Sep 2011 16:33:54 +0200

duicontrolpanel (0.14.0.1) unstable; urgency=low

  * supports applets written in qml
  * Fixes: NB#281433 - [FEA] qml based applets for control panel
  * Fixes: NB#267545 - [TASK] Brigthness slider needs info about power
    save mode (styling improvement)
  * Fixes: NB#282673 - [TASK] Manage applications should appear as
    button instead of drilldown
  * Fixes: NB#282669 - [TASK] Sync & Backup subview should use buttons
    instead of drilldowns

 -- Robert Manner <robert.manner@blumsoft.eu>  Mon, 19 Sep 2011 09:45:18 +0200

duicontrolpanel (0.13.4) unstable; urgency=low

  * Fixes: NB#280032 - Settings: Wrong alignment in settings view

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 31 Aug 2011 11:36:25 +0200

duicontrolpanel (0.13.2.2) unstable; urgency=low

  * Fixes: NB#279039 - regressions about reopening control panel

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 23 Aug 2011 17:34:54 +0200

duicontrolpanel (0.13.2.1) unstable; urgency=low

  * Fixes: NB#265196
    Changes fix for NB#265196 to use common group header instead of
    putting the separator and the label under each other
  * Fixes: sheet does not follow dcp orientation
  * fixed 273261 - China variant:Suggest to remove Feed on home screen
    option in Notifications setting from PRC image