@@ -1,8 +1,12 @@
 duicontrolpanel (0.14.3~unreleased) unstable; urgency=low
 
+  [ Viktor Nagy ]
   * Added performance measuring build option.
 
- -- Viktor Nagy <viktor.nagy@blumsoft.eu>  Mon, 10 Oct 2011 09:56:25 +0200
+  [ Robert Manner ]
+  * Fixes: NB#284645 - brightness applet from search has a mainpage icon
+
+ -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 11 Oct 2011 14:21:13 +0200
 
 duicontrolpanel (0.14.2.2) unstable; urgency=low
 
